tests/ui/macros/issue-61053-missing-repetition.stderr
error: variable `j` is still repeating at this depth
  --> $DIR/issue-61053-missing-repetition.rs:5:52
   |
LL |     ($( $i:ident = $($j:ident),+ );*) => { $( $i = $j; )* };
   |                                -                   ^^
   |                                |
   |                                expected repetition
   |
note: the lint level is defined here
  --> $DIR/issue-61053-missing-repetition.rs:1:9
   |
LL | #![deny(meta_variable_misuse)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: variable `j` is still repeating at this depth
  --> $DIR/issue-61053-missing-repetition.rs:14:60
   |
LL |             ($( $i:ident = $($j:ident),+ );*) => { $( $i = $j; )* };
   |                                        -                   ^^
   |                                        |
   |                                        expected repetition

error: variable `j` is still repeating at this depth
  --> $DIR/issue-61053-missing-repetition.rs:20:21
   |
LL |     ( $( $i:ident = $($j:ident),+ );* ) => {
   |                                 - expected repetition
LL |         $(macro_rules! $i {
LL |             () => { $j };
   |                     ^^

error: aborting due to 3 previous errors

